2005-10-16  Moritz Schulte  <moritz@g10code.com>

	* g10lib.h: Removed G10_I18N_H related check; it seems to be a
	GnuPG relict (Libgcrypt does not define this symbol anywhere).
	(FLAG_MODULE_DISABLED): Don't forget parantheses around shifted
	value.

2005-10-09  Moritz Schulte  <moritz@g10code.com>

	* global.c (gcry_control): Call global_init() after passing thread
	cbs to ath.  global_init() MUST to be called AFTER passing the cbs
	to ath and BEFORE calling library functions, which make use of
	ath.  This change combines cbs installing with ath initialization
	and thus removes the need to call other library initialization
	functions inbetween like e.g. gcry_check_version().

2005-10-01  Moritz Schulte  <moritz@g10code.com>

	* ath.c: Assign copyright to FSF.
	* ath.h: Likewise.

2005-06-25  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (pkgconfigdir, pkgconfig_DATA): Removed variables.
	* libgcrypt.pc.in: Removed file - we do not want to support a
	second, foreign configuration system.

2005-06-17  Moritz Schulte  <moritz@g10code.com>

	* global.c (gcry_xstrdup): Removed superfluous strcpy call.

2005-04-22  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (pkgconfigdir, pkgconfig_DATA): New; support for
	pkgconfig provided by Albert Chin.
	* libgcrypt.pc.in (Cflags): New file.

2005-04-16  Moritz Schulte  <moritz@g10code.com>

	* g10lib.h (_gcry_ac_init): Declare.
	* global.c (global_init): Call _gcry_ac_init; don't forget to set
	err.

2005-04-14  Werner Koch  <wk@g10code.com>

	* sexp.c (whitespacep): New.
	(sexp_sscan): Replaced isdigit and isspace by whitespacep and
	digitp.

2005-04-11  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h (gcry_md_algos): Added: GCRY_MD_WHIRLPOOL.
	* cipher.h (_gcry_digest_spec_whirlpool): Declare.

2005-03-30  Moritz Schulte  <moritz@g10code.com>

	* libgcrypt.vers: Added: gcry_ac_io_init, gry_ac_io_init_va.

	* gcrypt.h (gcry_ac_data_read_cb_t, gcry_ac_data_write_cb_t,